- small bug fix on GetCoverage
git-svn-id: http://svn.codehaus.org/geoserver/branches/1.7.x_WCS10EMF_ND@10188 ef1d6e69-97e5-0310-af46-8a06194da32a

Former-commit-id: 149d1b15c311f755d84893812f1ed2c1cd53e380